# STM32CubeG0

./: .gitignore  CMakeLists.txt
ConfigFiles/: FreeRTOSConfig.h
